test/trivial/bradc/defaultinit1a.good
defaultinit1a.chpl:1: In function 'main':
defaultinit1a.chpl:3: error: 'a' used before defined (first used here)
defaultinit1a.chpl:4: error: 'b' used before defined (first used here)
defaultinit1a.chpl:5: error: 'c' used before defined (first used here)
defaultinit1a.chpl:6: error: 'd' used before defined (first used here)
defaultinit1a.chpl:7: error: 'e' used before defined (first used here)
